--- a/reality_clash.yaml
+++ b/reality_clash.yaml
@@ -19,6 +19,8 @@ proxies:
   - {"name":"🇩🇪DE | 🟢 | vless | @Outline_Vpn | 14","type":"vless","server":"greenwolf.fonixapp.org","port":12901,"udp":false,"uuid":"d2bcb15b-8cf0-402c-af32-6b04615144c9","tls":false,"servername":"canva.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"UIgzNUpO2PvGIgjtIK1GEikBFRVvfA1jm7bfor0HlAM","short-id":"b538b3","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇫🇮FI | 🟢 | vless | @Outline_Vpn | 17","type":"vless","server":"212.87.222.42","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇩🇪DE | 🟢 | vless | @Outline_Vpn | 18","type":"vless","server":"87.120.165.214","port":443,"udp":false,"uuid":"9bc48566-76f9-44d7-8ad0-af41336b4004","tls":false,"servername":"google.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"7tgf5o3AfrE-TWqB3CpBuuZyt7S9tJq6TZ26gPWNyzY","short-id":"3549df188940fe","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇳🇱NL | 🟢 | vless | @prrofile_purple | 104","type":"vless","server":"92.112.126.22","port":8442,"udp":false,"uuid":"31303220-3533-4035-b320-393720313032","tls":false,"servername":"creativecommons.org","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"pFRfJJDY6TYJq-OVgAqFXhdaeur7gJWJM-RZT8g8yAA","short-id":"59b75803","client-fingerprint":"safari"},"client-fingerprint":"safari"}
+  - {"name":"🇨🇦CA | 🟢 | vless | @prrofile_purple | 107","type":"vless","server":"ca.shatak.store","port":7020,"udp":false,"uuid":"5a7a7e1e-7e1e-47ea-9e1e-e1e65e1e7e1e","tls":false,"servername":"journalofbigdata.springeropen.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"TmD2tgPqVKs9s4FiP6qgaRR1vE03_l30_PKlljwkJiQ","short-id":"7fec3adb0c3aee58","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
   - {"name":"🇩🇪DE | 🟢 | vless | @prrofile_purple | 110","type":"vless","server":"graygoat.fonixapp.org","port":45846,"udp":false,"uuid":"534c8834-d096-462c-8c16-37571a798ef3","tls":false,"servername":"stackoverflow.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"17q39_glGtdUgFWkKwjxnBG0PxYkJbgt9bfkotaj7yg","short-id":"ac","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇩🇪DE | 🟢 | vless | @prrofile_purple | 111","type":"vless","server":"91.107.128.99","port":443,"udp":false,"uuid":"4577c520-59c0-4edf-99f9-a131758aecad","tls":false,"servername":"tgju.org","network":"tcp","reality-opts":{"public-key":"lG2emtmtOMj1MRRYNQnHfH7p5IHkOyGWXvaCe0kwS0Q","short-id":"598b09fa644710f5","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇩🇪DE | 🟢 | vless | @prrofile_purple | 119","type":"vless","server":"ab.iranlit.ir","port":1611,"udp":false,"uuid":"202ac83e-9012-4283-8acb-9af2c2a2dfeb","tls":false,"servername":"zhaket.com","network":"tcp","reality-opts":{"public-key":"3EWvgfHUv-7aKL47dJL1WiIHY43aeWo8QUZRjzCw0RI","short-id":"6f84e8adb893b4bd","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
@@ -27,9 +29,10 @@ proxies:
   - {"name":"❔XX | 🟢 | vless | @prrofile_purple | 132","type":"vless","server":"delta.realtechshop.top","port":443,"udp":false,"uuid":"ff8fffd7-3546-488b-a5f2-a74896da74a2","tls":false,"servername":"tgju.org","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"tw6uAbjXzRSIKChb6pDbHVNjnU9Don4hbv6dHRkmJx8","short-id":"e54b5ad736ae4c38","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
   - {"name":"🇫🇮FI | 🟢 | vless | @prrofile_purple | 136","type":"vless","server":"direct.yasharteam.com","port":443,"udp":false,"uuid":"59db3b45-830a-4b6c-8b7d-9bd6d7189c7d","tls":false,"servername":"tgju.org","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"tw6uAbjXzRSIKChb6pDbHVNjnU9Don4hbv6dHRkmJx8","short-id":"e54b5ad736ae4c38","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
   - {"name":"🇩🇪DE | 🔴 | vless | @prrofile_purple | 141","type":"vless","server":"91.107.243.238","port":2025,"udp":false,"uuid":"3f042483-c71c-40cc-a4b7-d79f80db4253","tls":false,"servername":"www.cloudflare.com","network":"grpc","grpc-opts":{"grpc-service-name":"Telegram : @PouRia_Cheat"},"reality-opts":{"public-key":"AUNIYov4R2TvNmC0cF0NiKWYGqzikosOu4g2wcCALlw","short-id":"8d9c20be72b4","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"❔XX | 🔴 | vless | @prrofile_purple | 143","type":"vless","server":"rep.tr.xpnvip.ir","port":2689,"udp":false,"uuid":"fa695024-dff5-47c0-8976-64b963236c22","tls":false,"servername":"tgju.org","network":"grpc","grpc-opts":{"grpc-service-name":"nama"},"reality-opts":{"public-key":"L4WAAdlTv7i2tDZwPcvYrCfZg2IDCI_sp5LElu3u91U","short-id":"b6c24852f86067a6","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
   - {"name":"🇩🇪DE | 🟢 | vless | @v2ray1_ng | 4","type":"vless","server":"51.38.98.69","port":443,"udp":false,"uuid":"6b690c69-7301-44c4-81e8-9d5d7e8263a6","tls":false,"servername":"yahoo.com","network":"tcp","reality-opts":{"public-key":"-3sZE2OPDhkNtxufF2YqPmoa5hqVna5zalfJfrUiMm0","short-id":"ecd6615548c2bddb","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇨🇦CA | 🟢 | vless | @ConfigsHUB | 15","type":"vless","server":"amazon-20.cristiano.name.ng","port":443,"udp":false,"uuid":"4c26ebc3-7784-46d8-b52a-7b0ccae6f4b4","tls":false,"servername":"store.steampowered.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"TGlPtfVzGIVpMauPRMGJj2Uu6GUiCpu5ZizIIjw-wx4","short-id":"f5","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇳🇱NL | 🔴 | vless | @ConfigsHUB | 8","type":"vless","server":"193.233.19.17","port":2053,"udp":false,"uuid":"d6873a1d-38bf-430d-a701-a874b9be3982","tls":false,"servername":"refersion.com","network":"xhttp","reality-opts":{"public-key":"liDJBs0Z831sti-z1AqSshl-QKcJqjxLAdADy1uXvzg","short-id":"96c58a92f1dd5eaa","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇩🇪DE | 🟢 | vless | @ConfigsHUB | 9","type":"vless","server":"abri.abriabri.ir","port":2233,"udp":false,"uuid":"97ecfbb6-949b-4f4c-bce1-16a5036a0af5","tls":false,"servername":"www.tgju.org","network":"tcp","reality-opts":{"public-key":"XXyGhQ_iIds5fOp-JEq76iPb1heaBCSd7N5cOe9oFlg","short-id":"e0","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
+  - {"name":"🇺🇸US | 🟢 | vless | @ConfigsHUB | 13","type":"vless","server":"amazon-20.cristiano.name.ng","port":443,"udp":false,"uuid":"4c26ebc3-7784-46d8-b52a-7b0ccae6f4b4","tls":false,"servername":"store.steampowered.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"TGlPtfVzGIVpMauPRMGJj2Uu6GUiCpu5ZizIIjw-wx4","short-id":"f5","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇩🇪DE | 🔴 | vless | @free1_vpn | 5","type":"vless","server":"87.120.205.207","port":2025,"udp":false,"uuid":"ebac2049-8367-4eab-a1a5-8b742b2fd3b6","tls":false,"servername":"yahoo.com","network":"grpc","grpc-opts":{"grpc-service-name":"das12327gsgsyu"},"reality-opts":{"public-key":"Cnuh4bNEBvRIjrYBEWSVhX8nr5j46lHuyen_IU2rbSk","short-id":"a76e2f1d45","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 5","type":"vless","server":"192.145.28.109","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇨🇿CZ | 🟢 | vless | @Outlinev2rayNG | 6","type":"vless","server":"45.83.130.133","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
@@ -69,6 +72,8 @@ proxy-groups:
       - '🇩🇪DE | 🟢 | vless | @Outline_Vpn | 14'
       - '🇫🇮FI | 🟢 | vless | @Outline_Vpn | 17'
       - '🇩🇪DE | 🟢 | vless | @Outline_Vpn | 18'
+      - '🇳🇱NL | 🟢 | vless | @prrofile_purple | 104'
+      - '🇨🇦CA | 🟢 | vless | @prrofile_purple | 107'
       - '🇩🇪DE | 🟢 | vless | @prrofile_purple | 110'
       - '🇩🇪DE | 🟢 | vless | @prrofile_purple | 111'
       - '🇩🇪DE | 🟢 | vless | @prrofile_purple | 119'
@@ -77,9 +82,10 @@ proxy-groups:
       - '❔XX | 🟢 | vless | @prrofile_purple | 132'
       - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 136'
       - '🇩🇪DE | 🔴 | vless | @prrofile_purple | 141'
-      - '❔XX | 🔴 | vless | @prrofile_purple | 143'
       - '🇩🇪DE | 🟢 | vless | @v2ray1_ng | 4'
-      - '🇨🇦CA | 🟢 | vless | @ConfigsHUB | 15'
+      - '🇳🇱NL | 🔴 | vless | @ConfigsHUB | 8'
+      - '🇩🇪DE | 🟢 | vless | @ConfigsHUB | 9'
+      - '🇺🇸US | 🟢 | vless | @ConfigsHUB | 13'
       - '🇩🇪DE | 🔴 | vless | @free1_vpn | 5'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 5'
       - '🇨🇿CZ | 🟢 | vless | @Outlinev2rayNG | 6'
@@ -119,6 +125,8 @@ proxy-groups:
       - '🇩🇪DE | 🟢 | vless | @Outline_Vpn | 14'
       - '🇫🇮FI | 🟢 | vless | @Outline_Vpn | 17'
       - '🇩🇪DE | 🟢 | vless | @Outline_Vpn | 18'
+      - '🇳🇱NL | 🟢 | vless | @prrofile_purple | 104'
+      - '🇨🇦CA | 🟢 | vless | @prrofile_purple | 107'
       - '🇩🇪DE | 🟢 | vless | @prrofile_purple | 110'
       - '🇩🇪DE | 🟢 | vless | @prrofile_purple | 111'
       - '🇩🇪DE | 🟢 | vless | @prrofile_purple | 119'
@@ -127,9 +135,10 @@ proxy-groups:
       - '❔XX | 🟢 | vless | @prrofile_purple | 132'
       - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 136'
       - '🇩🇪DE | 🔴 | vless | @prrofile_purple | 141'
-      - '❔XX | 🔴 | vless | @prrofile_purple | 143'
       - '🇩🇪DE | 🟢 | vless | @v2ray1_ng | 4'
-      - '🇨🇦CA | 🟢 | vless | @ConfigsHUB | 15'
+      - '🇳🇱NL | 🔴 | vless | @ConfigsHUB | 8'
+      - '🇩🇪DE | 🟢 | vless | @ConfigsHUB | 9'
+      - '🇺🇸US | 🟢 | vless | @ConfigsHUB | 13'
       - '🇩🇪DE | 🔴 | vless | @free1_vpn | 5'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 5'
       - '🇨🇿CZ | 🟢 | vless | @Outlinev2rayNG | 6'
@@ -168,6 +177,8 @@ proxy-groups:
       - '🇩🇪DE | 🟢 | vless | @Outline_Vpn | 14'
       - '🇫🇮FI | 🟢 | vless | @Outline_Vpn | 17'
       - '🇩🇪DE | 🟢 | vless | @Outline_Vpn | 18'
+      - '🇳🇱NL | 🟢 | vless | @prrofile_purple | 104'
+      - '🇨🇦CA | 🟢 | vless | @prrofile_purple | 107'
       - '🇩🇪DE | 🟢 | vless | @prrofile_purple | 110'
       - '🇩🇪DE | 🟢 | vless | @prrofile_purple | 111'
       - '🇩🇪DE | 🟢 | vless | @prrofile_purple | 119'
@@ -176,9 +187,10 @@ proxy-groups:
       - '❔XX | 🟢 | vless | @prrofile_purple | 132'
       - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 136'
       - '🇩🇪DE | 🔴 | vless | @prrofile_purple | 141'
-      - '❔XX | 🔴 | vless | @prrofile_purple | 143'
       - '🇩🇪DE | 🟢 | vless | @v2ray1_ng | 4'
-      - '🇨🇦CA | 🟢 | vless | @ConfigsHUB | 15'
+      - '🇳🇱NL | 🔴 | vless | @ConfigsHUB | 8'
+      - '🇩🇪DE | 🟢 | vless | @ConfigsHUB | 9'
+      - '🇺🇸US | 🟢 | vless | @ConfigsHUB | 13'
       - '🇩🇪DE | 🔴 | vless | @free1_vpn | 5'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 5'
       - '🇨🇿CZ | 🟢 | vless | @Outlinev2rayNG | 6'
