--- a/reality_clash.yaml
+++ b/reality_clash.yaml
@@ -29,7 +29,9 @@ proxies:
   - {"name":"❔XX | 🟢 | vless | @prrofile_purple | 140","type":"vless","server":"delta.realtechshop.top","port":443,"udp":false,"uuid":"ff8fffd7-3546-488b-a5f2-a74896da74a2","tls":false,"servername":"tgju.org","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"tw6uAbjXzRSIKChb6pDbHVNjnU9Don4hbv6dHRkmJx8","short-id":"e54b5ad736ae4c38","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
   - {"name":"🇫🇮FI | 🟢 | vless | @prrofile_purple | 144","type":"vless","server":"direct.yasharteam.com","port":443,"udp":false,"uuid":"59db3b45-830a-4b6c-8b7d-9bd6d7189c7d","tls":false,"servername":"tgju.org","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"tw6uAbjXzRSIKChb6pDbHVNjnU9Don4hbv6dHRkmJx8","short-id":"e54b5ad736ae4c38","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
   - {"name":"🇩🇪DE | 🔴 | vless | @prrofile_purple | 149","type":"vless","server":"91.107.243.238","port":2025,"udp":false,"uuid":"3f042483-c71c-40cc-a4b7-d79f80db4253","tls":false,"servername":"www.cloudflare.com","network":"grpc","grpc-opts":{"grpc-service-name":"Telegram : @PouRia_Cheat"},"reality-opts":{"public-key":"AUNIYov4R2TvNmC0cF0NiKWYGqzikosOu4g2wcCALlw","short-id":"8d9c20be72b4","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇰🇷KR | 🟢 | vless | @ConfigsHUB | 6","type":"vless","server":"amazon-20.cristiano.name.ng","port":443,"udp":false,"uuid":"4c26ebc3-7784-46d8-b52a-7b0ccae6f4b4","tls":false,"servername":"store.steampowered.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"TGlPtfVzGIVpMauPRMGJj2Uu6GUiCpu5ZizIIjw-wx4","short-id":"f5","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇨🇦CA | 🟢 | vless | @ConfigsHUB | 8","type":"vless","server":"amazon-20.cristiano.name.ng","port":443,"udp":false,"uuid":"4c26ebc3-7784-46d8-b52a-7b0ccae6f4b4","tls":false,"servername":"store.steampowered.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"TGlPtfVzGIVpMauPRMGJj2Uu6GUiCpu5ZizIIjw-wx4","short-id":"f5","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇩🇪DE | 🟢 | vless | @ConfigsHUB | 15","type":"vless","server":"r.optiping.ir","port":33450,"udp":false,"uuid":"df2f8de3-e855-47a6-8a87-6c72fdad4ddb","tls":false,"servername":"p.optiping.ir","network":"tcp","reality-opts":{"public-key":"Y3h3cOAkz3j_CbseRzm3EAkVq9HMkqv-gnwcXI2TI0Q","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇳🇱NL | 🟢 | vless | @ConfigsHUB | 17","type":"vless","server":"rss.optiping.ir","port":21934,"udp":false,"uuid":"df2f8de3-e855-47a6-8a87-6c72fdad4ddb","tls":false,"servername":"chess.com","network":"tcp","reality-opts":{"public-key":"yGgU4VVwpWk3sY54VgDxYVg77n5i-4jduHegq6PqPyA","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇩🇪DE | 🟢 | vless | @free1_vpn | 4","type":"vless","server":"51.38.98.69","port":443,"udp":false,"uuid":"6b690c69-7301-44c4-81e8-9d5d7e8263a6","tls":false,"servername":"yahoo.com","network":"tcp","reality-opts":{"public-key":"-3sZE2OPDhkNtxufF2YqPmoa5hqVna5zalfJfrUiMm0","short-id":"ecd6615548c2bddb","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇩🇪DE | 🔴 | vless | @free1_vpn | 5","type":"vless","server":"87.120.205.207","port":2025,"udp":false,"uuid":"ebac2049-8367-4eab-a1a5-8b742b2fd3b6","tls":false,"servername":"yahoo.com","network":"grpc","grpc-opts":{"grpc-service-name":"das12327gsgsyu"},"reality-opts":{"public-key":"Cnuh4bNEBvRIjrYBEWSVhX8nr5j46lHuyen_IU2rbSk","short-id":"a76e2f1d45","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 2","type":"vless","server":"2.58.95.16","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
@@ -82,7 +84,9 @@ proxy-groups:
       - '❔XX | 🟢 | vless | @prrofile_purple | 140'
       - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 144'
       - '🇩🇪DE | 🔴 | vless | @prrofile_purple | 149'
-      - '🇰🇷KR | 🟢 | vless | @ConfigsHUB | 6'
+      - '🇨🇦CA | 🟢 | vless | @ConfigsHUB | 8'
+      - '🇩🇪DE | 🟢 | vless | @ConfigsHUB | 15'
+      - '🇳🇱NL | 🟢 | vless | @ConfigsHUB | 17'
       - '🇩🇪DE | 🟢 | vless | @free1_vpn | 4'
       - '🇩🇪DE | 🔴 | vless | @free1_vpn | 5'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 2'
@@ -135,7 +139,9 @@ proxy-groups:
       - '❔XX | 🟢 | vless | @prrofile_purple | 140'
       - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 144'
       - '🇩🇪DE | 🔴 | vless | @prrofile_purple | 149'
-      - '🇰🇷KR | 🟢 | vless | @ConfigsHUB | 6'
+      - '🇨🇦CA | 🟢 | vless | @ConfigsHUB | 8'
+      - '🇩🇪DE | 🟢 | vless | @ConfigsHUB | 15'
+      - '🇳🇱NL | 🟢 | vless | @ConfigsHUB | 17'
       - '🇩🇪DE | 🟢 | vless | @free1_vpn | 4'
       - '🇩🇪DE | 🔴 | vless | @free1_vpn | 5'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 2'
@@ -187,7 +193,9 @@ proxy-groups:
       - '❔XX | 🟢 | vless | @prrofile_purple | 140'
       - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 144'
       - '🇩🇪DE | 🔴 | vless | @prrofile_purple | 149'
-      - '🇰🇷KR | 🟢 | vless | @ConfigsHUB | 6'
+      - '🇨🇦CA | 🟢 | vless | @ConfigsHUB | 8'
+      - '🇩🇪DE | 🟢 | vless | @ConfigsHUB | 15'
+      - '🇳🇱NL | 🟢 | vless | @ConfigsHUB | 17'
       - '🇩🇪DE | 🟢 | vless | @free1_vpn | 4'
       - '🇩🇪DE | 🔴 | vless | @free1_vpn | 5'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 2'
